--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -42,11 +42,11 @@ body{
     margin: 2% auto;
     border-radius: 50%;
 }
-/* .state li:hover{
-    background-color: hsl(25, 97%, 53%);
+ .state li:hover{
+    background-color: hsl(218, 9%, 36%);
     color: hsl(0, 0%, 100%);
     cursor: pointer;
-} */
+}
 
 .state ul{
     padding-inline-start: 0;
