add media query for smaller screens

--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
 
+/* *{
+    margin: 0;
+    padding: 0;
+} */
+
 html{
     background-color:  hsl(216, 12%, 8%);
     color: hsl(0, 0%, 100%);
@@ -12,9 +17,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 #star{
-    /* height: 10%; */
     width: 5%;
     background-color: hsl(216, 6%, 31%);
     padding: 4%;
@@ -31,6 +36,7 @@ body{
     width: 23%;
     background-color: hsl(213, 19%, 18%);
     padding: 2%;
+    margin: 0 auto;
     border-radius: 10px;
     font-family: Overpass, sans-serif;
 }
@@ -97,3 +103,13 @@ button:hover{
 .attribution{
     display: none;
 }
+
+@media only screen and (min-width: 375px){
+    body{
+        width: 300px;
+    }
+    .state{
+        width: 100%;
+        margin: 0 auto;
+    }
+};
